--- a/other pages/CSS/projects.css
+++ b/other pages/CSS/projects.css
@@ -8,10 +8,87 @@
     src: url("./font/Montserrat/Montserrat-Light.ttf")
 }
 
+p {
+    margin-bottom: 3rem;
+}
+
 .bodyContainer {
     border: 6px solid rgba(0, 0, 0, 0.726);
     background-color: rgba(0, 0, 0, 0.726);
     min-height: 100vh;
+}
+
+.nameCol {
+    margin-top: 17vh;
+    font-size: 39px;
+    font-family: profileFont;
+    letter-spacing: 100px;
+    color: rgba(255, 255, 255, 0);
+}
+
+.nameColOnLoad {
+    letter-spacing: 40px;
+    transition-duration: 2.5s;
+    color: rgba(255, 255, 255, 0.999)
+}
+
+.intro1 {
+    color: rgba(255, 255, 255, 0);
+    font-size: 13px;
+}
+
+.intro2 {
+    color: rgba(255, 255, 255, 0);
+    font-size: 13px;
+}
+
+.intro11 {
+    color: rgba(255, 255, 255, 0.999);
+    font-family: regularFont;
+    font-size: 13px;
+    transition-duration: 2.4s;
+}
+
+.intro22 {
+    color: rgba(255, 255, 255, 0.999);
+    font-family: regularFont;
+    font-size: 13px;
+    transition-duration: 2.4s;
+}
+
+.hr1 {
+    top: 2vh;
+    border-color: rgba(255, 255, 255, 0);
+    max-width: 1vw;
+}
+
+.hr2 {
+    top: 2vh;
+    border-color: rgba(255, 255, 255, 0.999);
+    max-width: 45vw;
+    transition-duration: 2.5s;
+}
+
+.knowledge1 {
+    font-family: regularFont;
+    color: rgba(255, 255, 255, 0);
+    font-size: 12px;
+}
+
+.knowledge2 {
+    font-family: regularFont;
+    color: rgba(255, 255, 255, 0);
+    font-size: 12px;
+}
+
+.knowledgeOnLoad1 {
+    color: rgba(255, 255, 255, 0.999);
+    transition-duration: 1.5s;
+}
+
+.knowledgeOnLoad2 {
+    color: rgba(255, 255, 255, 0.999);
+    transition-duration: 1.5s;
 }
 
 .bottomRow {
