--- a/other pages/CSS/interests.css
+++ b/other pages/CSS/interests.css
@@ -66,6 +66,11 @@ p {
     padding: 15px;
 }
 
+.photoInModal {
+    width: 100%;
+    height: auto;
+}
+
 .bottomRow {
     color: rgba(255, 255, 255, 0);
     font-family: regularFont;
