Redesign to 2 page layout

--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -24,6 +24,12 @@
   padding-top: 75px;
 }
 
+.backRow {
+  color: white;
+  text-decoration: none;
+  margin-top: 35px;
+}
+
 .name {
   font-family: profileFont;
   color: white;
