Adds animation to Project arrow and gear bullet points to exp

--- a/style.css
+++ b/style.css
@@ -52,6 +52,30 @@
     color: white;
   }
 }
+.textDecorationNone {
+  text-decoration: none;
+}
+.pushOver {
+  transform: matrix(1, 0, 0, 1, 16, 1);
+}
+
+.iLikeToMoveIt {
+  animation: moveIt 2.5s forwards;
+  animation-timing-function: linear;
+  animation-iteration-count: 100;
+  transform: matrix(1, 0, 0, 1, 1, 1);
+}
+@keyframes moveIt {
+  0% {
+    transform: matrix(1, 0, 0, 1, 2, 1);
+  }
+  50% {
+    transform: matrix(1, 0, 0, 1, 9, 1);
+  }
+  100% {
+    transform: matrix(1, 0, 0, 1, 2, 1);
+  }
+}
 
 .intro1 {
   font-size: 13px;
