--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -9,15 +9,29 @@
 }
 
 @media (min-width: 5px) {
+  .projects-page-title {
+    font-size: 40px;
+    margin: 25px 0px;
+  }
+  .project-container {
+    margin: 20px 0px;
+  }
   .project-title {
   }
   .project-image {
   }
   .project-description {
   }
+  .last-element{
+    /* padding-bottom: 62px; */
+  }
 }
 
 @media (min-width: 576px) {
+  .projects-page-title {
+    font-size: 40px;
+    margin: 25px 0px;
+  }
   .project-title {
   }
   .project-image {
@@ -27,6 +41,10 @@
 }
 
 @media (min-width: 768px) {
+  .projects-page-title {
+    font-size: 40px;
+    margin: 25px 0px;
+  }
   .project-title {
   }
   .project-image {
@@ -37,7 +55,7 @@
 
 @media (min-width: 992px) {
   .projects-page-title {
-    font-size: 25px;
+    font-size: 40px;
     margin: 25px 0px;
   }
   .project-title {
@@ -97,6 +115,9 @@
 .projects-page-title {
   color: white;
   font-family: regularFont;
+  text-decoration: underline;
+  text-underline-offset: 17px;
+  text-decoration-thickness: from-font;
 }
 
 .project-container {
@@ -137,12 +158,11 @@
 }
 
 .home-link {
-  font-size: 12px;
   position: fixed;
   bottom: 0px;
   width: 100%;
   background-color: black;
-  padding-top: 3px;
+  padding-top: 15px;
 }
 
 .home-button {
