--- a/src/CSS/projects.css
+++ b/src/CSS/projects.css
@@ -23,7 +23,7 @@
   .project-description {
   }
   .last-element{
-    /* padding-bottom: 62px; */
+    padding-bottom: 62px;
   }
 }
 
@@ -153,7 +153,7 @@
 .project-description {
   color: white;
   max-width: 100%;
-  margin: auto;
+  margin: 7px auto 0px auto;
   cursor: default;
 }
 
